# makepad

./: Cargo.toml
draw/src/: lib.rs
examples/simple_image/: Cargo.toml
examples/simple_image/src/: app.rs  main.rs
examples/text_flow/src/: app.rs
examples/text_layout/: Cargo.toml
examples/text_layout/src/: app.rs  main.rs
widgets/src/: text_flow.rs
